--- a/app/src/main/res/layout/activity_bmi.xml
+++ b/app/src/main/res/layout/activity_bmi.xml
@@ -24,6 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Umur : "
+            android:inputType="number"
             />
         <EditText
             android:id="@+id/edtUmur"
@@ -31,6 +32,7 @@
             android:layout_width="220dp"
             android:layout_height="wrap_content"
             android:hint="Umur Anda"
+            android:inputType="number"
             />
         <TextView
             android:layout_marginLeft="30dp"
@@ -54,7 +56,8 @@
             android:layout_marginLeft="20dp"
             android:layout_width="175dp"
             android:layout_height="wrap_content"
-            android:hint="Tinggi Anda"/>
+            android:hint="Tinggi Anda"
+            android:inputType="number"/>
         <TextView
             android:layout_marginLeft="30dp"
             android:layout_width="wrap_content"
@@ -77,7 +80,8 @@
             android:layout_marginLeft="20dp"
             android:layout_width="180dp"
             android:layout_height="wrap_content"
-            android:hint="Berat Anda"/>
+            android:hint="Berat Anda"
+            android:inputType="number"/>
         <TextView
             android:layout_marginLeft="30dp"
             android:layout_width="wrap_content"
