--- a/app/src/main/res/layout/activity_mahasiswa.xml
+++ b/app/src/main/res/layout/activity_mahasiswa.xml
@@ -77,6 +77,7 @@
             android:id="@+id/edtUAS"
             android:layout_width="240dp"
             android:layout_height="wrap_content"
+            android:inputType="number"
             />
     </LinearLayout>
     <LinearLayout
@@ -99,6 +100,7 @@
             android:id="@+id/edtUTS"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
+            android:inputType="number"
             />
     </LinearLayout>
     <LinearLayout
@@ -119,6 +121,7 @@
             android:id="@+id/edtTugas"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
+            android:inputType="number"
             />
     </LinearLayout>
 
